# robotech

./: .gitignore  README.md  params.yaml
bagfiles/: 2017-02-17-13-24-52.bag  2017-02-17-13-24-52.bag.orig.active
junk/my_pr2_moveit_conf/: package.xml
junk/my_pr2_moveit_conf/config/: pr2.srdf
junk/planning_tutorial_2/: package.xml
junk/planning_tutorial_2/src/: motoman_motion.cpp
my_pr2_moveit_conf/: .setup_assistant
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/dual_manip2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/dual_manip2_moveit_config/config/: dual_support.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
src/dual_manip2_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/dual_manip_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/dual_manipulator_support/: CMakeLists.txt  package.xml
src/exam/: CMakeLists.txt  package.xml
src/mouse_reader/: CMakeLists.txt  package.xml
src/my_turtle/: map_prax.yaml.pgm  map_prax.yaml.yaml
src/planning_tutorial/: CMakeLists.txt  mainpage.dox  manifest.xml  proov.cpp
src/planning_tutorial/launch/: test.launch
src/planning_tutorial/src/: plan_interface.cpp  proov.cpp
src/usb_cam/: mainpage.dox
(+56 files in other folders)
